# md-mcp-doc

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  auth.py  config.py  docker-compose.yml  llms.txt  pyproject.toml  server.py
.github/workflows/: ci.yml  release.yml
core/: embedder.py  index.py  rrf.py  vec_store.py
tests/: conftest.py  test_crud.py  test_embedder.py  test_index.py  test_integration.py  test_links.py  test_replace.py  test_rrf.py  test_search.py  test_vec_store.py
tools/: crud.py  links.py  replace.py  search.py
