[project]
name = "wiki-mcp"
version = "0.1.0"
description = "Markdown wiki MCP server with fulltext and semantic search"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "sentence-transformers",
    "sqlite-vec",
    "python-frontmatter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "tools"]
artifacts = ["server.py", "config.py"]

[tool.hatch.build.targets.wheel.force-include]
"server.py" = "server.py"
"config.py" = "config.py"

[project.scripts]
wiki-mcp = "server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
